--- a/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
@@ -124,6 +124,7 @@ jobinfo_field_executorRouteStrategy=路由策略
 jobinfo_field_childJobId=子任務ID
 jobinfo_field_childJobId_placeholder=輸入子任務ID，如有多個請以逗號分隔
 jobinfo_field_executorBlockStrategy=阻塞處理策略
+jobinfo_field_timeZoneId=時區
 jobinfo_field_executorFailRetryCount=失敗重試次數
 jobinfo_field_executorFailRetryCount_placeholder=失敗重試次數，大於零時生效
 jobinfo_script_location=腳本位置
